# sprout

./: .gitignore  README.md  package-lock.json
canopy/: .dockerignore  .gitignore  CONTRIBUTING.md  Document.md  LICENSE  Makefile  README.md  go.mod  go.sum  part1.md  part2.md  part3.md
canopy/.docker/: Dockerfile  compose.yaml
canopy/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
canopy/.github/PULL_REQUEST_TEMPLATE/: pull_request.md
canopy/.github/workflows/: build-test.yaml  release.yml
canopy/bft/: README.md  bft.go  bft.md  bft.pb.go  bft_test.go  election.go  election.md  election_test.go  error.go  evidence.go  evidence.md  mock_test.go  msg.go  msg.md  msg_test.go  prop.go  prop.md  prop_test.go  vote.go  vote.md  vote_test.go
canopy/cmd/auto-update/: README.md  coordinator.go  main.go  updater.go
canopy/cmd/cli/: admin.go  cli.go  query.go
canopy/cmd/main/: main.go
canopy/cmd/rpc/: README.md  admin.go  client.go  eth.go  query.go  routes.go  server.go  sock.go  types.go
canopy/controller/: README.md  block.go  block.md  consensus.go  consensus.md  controller.go  controller.md  result.go  result.md  tx.go  tx.md
canopy/fsm/: README.md  account.go  account.md  account.pb.go  account_test.go  automatic.go  automatic.md  automatic_test.go  byzantine.go  byzantine.md  byzantine_test.go  committee.go  committee.md  committee_test.go  dex.go  dex.md  dex_test.go  error.go  error.md  ethereum.go  ethereum.md  ethereum_test.go  event.go  event.md  event_test.go  genesis.go  genesis.md  genesis.pb.go  genesis_test.go  gov.go  gov.md  gov.pb.go  gov_params.go  gov_test.go  indexer.go  indexer.md  indexer.pb.go  key.go  key.md  message.go  (+17 more)
canopy/lib/: block.go  block.pb.go  block_test.go  certificate.go  certificate.pb.go  certificate_test.go  codec.go  config.go  config_test.go  consensus.go  consensus.pb.go  consensus_test.go  dex.go  dex.pb.go  dex_test.go  error.go  event.go  event.pb.go  event_test.go  log.go  log_test.go  mempool.go  mempool_test.go  metrics.go  peer.go  peer.pb.go  peer_test.go  plugin.go  plugin.pb.go  store.go  store.pb.go  swap.go  swap.pb.go  tx.go  tx.pb.go  tx_test.go  util.go  util_test.go  vdf.go  vdf_test.go  (+1 more)
canopy/lib/.proto/: README.md  _generate.sh  account.proto  bft.proto  block.proto  certificate.proto  codec.proto  consensus.proto  crypto.proto  dex.proto  event.proto  genesis.proto  gov.proto  indexer.proto  message.proto  p2p.proto  peer.proto  plugin.proto  store.proto  swap.proto  tx.proto  validator.proto  wrapper.proto
canopy/lib/codec/: codec.go  codec.pb.go  codec_test.go
canopy/lib/crypto/: address.go  address_test.go  aead.go  aead_test.go  bls.go  bls_test.go  classgroup.go  classgroup_test.go  crypto.pb.go  ecdh.go  ecdh_test.go  ed25519.go  ed25519_test.go  eth_secp256k1.go  eth_secp256k1_test.go  hash.go  hash_test.go  key.go  key_batch.go  key_batch_test.go  key_test.go  vdf.go  (+5 more)
canopy/p2p/: README.md  book.go  book_test.go  conn.go  encrypt.go  encrypt_test.go  error.go  lock_trace.go  p2p.go  p2p.pb.go  p2p_test.go  set.go  set_test.go
canopy/plugin/python/: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TUTORIAL.md  main.py  pluginctl.sh  pyproject.toml
canopy/plugin/python/contract/: __init__.py  contract.py  error.py  plugin.py
canopy/plugin/python/contract/proto/: __init__.py  account_pb2.py  event_pb2.py  plugin_pb2.py  tx.proto  tx_pb2.py
canopy/plugin/python/tests/: __init__.py  test_config.py  test_contract.py
canopy/plugin/python/tutorial/: Makefile  main.py  requirements.txt  rpc_test.py
canopy/plugin/python/tutorial/proto/: tx.proto  tx_pb2.py
canopy/store/: README.md  error.go  fuzz_test.go  indexer.go  indexer_test.go  smt.go  smt_test.go  store.go  store_test.go  txn.go  txn_test.go  versioned_store.go
frontend/: .gitignore  GEMINI.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConnectWalletModal.tsx  CreatePostModal.tsx  ImageLightbox.tsx  Leaderboard.tsx  MainFeed.tsx  Navbar.tsx  PostStack.tsx  ProfileModal.tsx  Providers.tsx  SearchBar.tsx  SendRewardModal.tsx  TxHistoryModal.tsx
frontend/lib/: AppContext.tsx  canopy.ts  constants.ts  fileUtils.ts  ipfs.ts  serverStore.ts  types.ts
frontend/txbuilder/: bls.go  go.mod  go.sum  main.go  query.go
(+150 files in other folders)
